fix layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,9 +30,9 @@
 	--gradient-stop-3: hsl(280, 89%, 67%);
 	--gradient-subtle: linear-gradient(150deg, var(--gray-900) 19%, var(--gray-999) 81%);
 	--gradient-accent-light: linear-gradient(150deg,
-			#ca7879,
-			var(--accent-regular),
-			var(--accent-light));
+			var(--gradient-stop-2),
+			var(--gradient-stop-2),
+			var(--gradient-stop-2));
 	--gradient-stroke: linear-gradient(180deg, var(--gray-600), var(--gray-800));
 
 	/* Shadows */
